--- a/netflix.conf
+++ b/netflix.conf
@@ -1,4 +1,4 @@
-OMAIN-SUFFIX,netflix.com,NETFLIX
+DOMAIN-SUFFIX,netflix.com,NETFLIX
 DOMAIN-SUFFIX,netflix.net,NETFLIX
 DOMAIN-SUFFIX,nflxext.com,NETFLIX
 DOMAIN-SUFFIX,nflximg.com,NETFLIX
