--- a/netflix.conf
+++ b/netflix.conf
@@ -32,7 +32,7 @@ IP-CIDR,185.9.0.0/16,NETFLIX,no-resolve
 IP-CIDR,207.45.72.0/22,NETFLIX,no-resolve
 IP-CIDR,208.75.76.0/22,NETFLIX,no-resolve
 IP-CIDR,52.89.124.203/32,NETFLIX,no-resolve
-IP-CIDR,54.148.37.5/32,NETFLIX
+IP-CIDR,54.148.37.5/32,NETFLIX,no-resolve
 IP-CIDR,69.53.224.0/19,NETFLIX,no-resolve
 IP-CIDR,103.148.240.0/24,NETFLIX,no-resolve
 IP-CIDR,103.164.7.0/24,NETFLIX,no-resolve
