--- a/netflix.conf
+++ b/netflix.conf
@@ -1,3 +1,4 @@
+# Netflix Domain Rules
 DOMAIN-SUFFIX,netflix.com,NETFLIX
 DOMAIN-SUFFIX,netflix.net,NETFLIX
 DOMAIN-SUFFIX,nflxext.com,NETFLIX
@@ -5,6 +6,8 @@ DOMAIN-SUFFIX,nflximg.com,NETFLIX
 DOMAIN-SUFFIX,nflximg.net,NETFLIX
 DOMAIN-SUFFIX,nflxso.net,NETFLIX
 DOMAIN-SUFFIX,nflxvideo.net,NETFLIX
+
+# Additional Netflix Domain Rules
 DOMAIN-SUFFIX,netflixdnstest0.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest1.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest2.com,NETFLIX
@@ -15,8 +18,12 @@ DOMAIN-SUFFIX,netflixdnstest6.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest7.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest8.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest9.com,NETFLIX
+
+# Keyword Rules
 DOMAIN-KEYWORD,apiproxy-http,NETFLIX
 DOMAIN-KEYWORD,ichnaea-web-,NETFLIX
+
+# Netflix IP Rules
 IP-CIDR,23.246.0.0/18,NETFLIX,no-resolve
 IP-CIDR,37.77.184.0/21,NETFLIX,no-resolve
 IP-CIDR,45.57.0.0/17,NETFLIX,no-resolve
