--- a/netflix.conf
+++ b/netflix.conf
@@ -6,6 +6,7 @@ DOMAIN-SUFFIX,nflximg.com,NETFLIX
 DOMAIN-SUFFIX,nflximg.net,NETFLIX
 DOMAIN-SUFFIX,nflxso.net,NETFLIX
 DOMAIN-SUFFIX,nflxvideo.net,NETFLIX
+DOMAIN-SUFFIX,fast.com,NETFLIX
 
 # Additional Netflix Domain Rules
 DOMAIN-SUFFIX,netflixdnstest0.com,NETFLIX
@@ -20,6 +21,7 @@ DOMAIN-SUFFIX,netflixdnstest8.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest9.com,NETFLIX
 
 # Keyword Rules
+DOMAIN-KEYWORD,netflix,NETFLIX
 DOMAIN-KEYWORD,apiproxy-http,NETFLIX
 DOMAIN-KEYWORD,ichnaea-web-,NETFLIX
 
