--- a/netflix.conf
+++ b/netflix.conf
@@ -1,4 +1,3 @@
-# Netflix Domain Rules
 DOMAIN-SUFFIX,netflix.com,NETFLIX
 DOMAIN-SUFFIX,netflix.net,NETFLIX
 DOMAIN-SUFFIX,nflxext.com,NETFLIX
@@ -6,9 +5,6 @@ DOMAIN-SUFFIX,nflximg.com,NETFLIX
 DOMAIN-SUFFIX,nflximg.net,NETFLIX
 DOMAIN-SUFFIX,nflxso.net,NETFLIX
 DOMAIN-SUFFIX,nflxvideo.net,NETFLIX
-DOMAIN-SUFFIX,fast.com,NETFLIX
-
-# Additional Netflix Domain Rules
 DOMAIN-SUFFIX,netflixdnstest0.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest1.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest2.com,NETFLIX
@@ -19,13 +15,8 @@ DOMAIN-SUFFIX,netflixdnstest6.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest7.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest8.com,NETFLIX
 DOMAIN-SUFFIX,netflixdnstest9.com,NETFLIX
-
-# Keyword Rules
-DOMAIN-KEYWORD,netflix,NETFLIX
 DOMAIN-KEYWORD,apiproxy-http,NETFLIX
 DOMAIN-KEYWORD,ichnaea-web-,NETFLIX
-
-# Netflix IP Rules
 IP-CIDR,23.246.0.0/18,NETFLIX,no-resolve
 IP-CIDR,37.77.184.0/21,NETFLIX,no-resolve
 IP-CIDR,45.57.0.0/17,NETFLIX,no-resolve
@@ -41,7 +32,7 @@ IP-CIDR,185.9.0.0/16,NETFLIX,no-resolve
 IP-CIDR,207.45.72.0/22,NETFLIX,no-resolve
 IP-CIDR,208.75.76.0/22,NETFLIX,no-resolve
 IP-CIDR,52.89.124.203/32,NETFLIX,no-resolve
-IP-CIDR,54.148.37.5/32,NETFLIX,no-resolve
+IP-CIDR,54.148.37.5/32,NETFLIX
 IP-CIDR,69.53.224.0/19,NETFLIX,no-resolve
 IP-CIDR,103.148.240.0/24,NETFLIX,no-resolve
 IP-CIDR,103.164.7.0/24,NETFLIX,no-resolve
