--- a/apple.conf
+++ b/apple.conf
@@ -1,9 +1,9 @@
-DOMAIN,gateway.icloud.com,APPLE
-DOMAIN,gspe1-ssl.ls.apple.com,APPLE
-DOMAIN-SUFFIX,apple.news,APPLE
-DOMAIN,apple.comscoreresearch.com,APPLE
-DOMAIN,news-client.apple.com,APPLE
-DOMAIN,news-events.apple.com,APPLE
-DOMAIN,news-edge.apple.com,APPLE
-DOMAIN,gspe1-ssl.ls.apple.com,APPLE
-PROCESS-NAME,News,APPLE
+DOMAIN,gateway.icloud.com
+DOMAIN,gspe1-ssl.ls.apple.com
+DOMAIN-SUFFIX,apple.news
+DOMAIN,apple.comscoreresearch.com
+DOMAIN,news-client.apple.com
+DOMAIN,news-events.apple.com
+DOMAIN,news-edge.apple.com
+DOMAIN,gspe1-ssl.ls.apple.com
+PROCESS-NAME,News
