--- a/discord.conf
+++ b/discord.conf
@@ -1,6 +1,6 @@
-DOMAIN-SUFFIX,discord.com,DISCORD
-DOMAIN-SUFFIX,discord.gg,DISCORD
-DOMAIN-SUFFIX,discord.media,DISCORD
-DOMAIN-SUFFIX,discordapp.com,DISCORD
-DOMAIN-SUFFIX,discordapp.net,DISCORD
-DOMAIN-SUFFIX,discordstatus.com,DISCORD
+DOMAIN-SUFFIX,discord.com
+DOMAIN-SUFFIX,discord.gg
+DOMAIN-SUFFIX,discord.media
+DOMAIN-SUFFIX,discordapp.com
+DOMAIN-SUFFIX,discordapp.net
+DOMAIN-SUFFIX,discordstatus.com
