--- a/disney.conf
+++ b/disney.conf
@@ -1,173 +1,173 @@
-DOMAIN-SUFFIX,20thcenturystudios.com.au,DISNEY
-DOMAIN-SUFFIX,20thcenturystudios.com.br,DISNEY
-DOMAIN-SUFFIX,20thcenturystudios.jp,DISNEY
-DOMAIN-SUFFIX,abc-studios.com,DISNEY
-DOMAIN-SUFFIX,abc.com,DISNEY
-DOMAIN-SUFFIX,abcnews.com,DISNEY
-DOMAIN-SUFFIX,abcnews.edgesuite.net,DISNEY
-DOMAIN-SUFFIX,adobedtm.com,DISNEY
-DOMAIN-SUFFIX,adventuresbydisney.com,DISNEY
-DOMAIN-SUFFIX,babble.com,DISNEY
-DOMAIN-SUFFIX,babyzone.com,DISNEY
-DOMAIN-SUFFIX,bam.nr-data.net,DISNEY
-DOMAIN-SUFFIX,bamgrid.com,DISNEY
-DOMAIN-SUFFIX,beautyandthebeastmusical.co.uk,DISNEY
-DOMAIN-SUFFIX,braze.com,DISNEY
-DOMAIN-SUFFIX,cdn.optimizely.com,DISNEY
-DOMAIN-SUFFIX,conviva.com,DISNEY
-DOMAIN-SUFFIX,d9.flashtalking.com,DISNEY
-DOMAIN-SUFFIX,dilcdn.com,DISNEY
-DOMAIN-SUFFIX,disney-asia.com,DISNEY
-DOMAIN-SUFFIX,disney-discount.com,DISNEY
-DOMAIN-SUFFIX,disney-plus.net,DISNEY
-DOMAIN-SUFFIX,disney-portal.my.onetrust.com,DISNEY
-DOMAIN-SUFFIX,disney-studio.com,DISNEY
-DOMAIN-SUFFIX,disney-studio.net,DISNEY
-DOMAIN-SUFFIX,disney.asia,DISNEY
-DOMAIN-SUFFIX,disney.be,DISNEY
-DOMAIN-SUFFIX,disney.bg,DISNEY
-DOMAIN-SUFFIX,disney.ca,DISNEY
-DOMAIN-SUFFIX,disney.ch,DISNEY
-DOMAIN-SUFFIX,disney.co.il,DISNEY
-DOMAIN-SUFFIX,disney.co.jp,DISNEY
-DOMAIN-SUFFIX,disney.co.kr,DISNEY
-DOMAIN-SUFFIX,disney.co.th,DISNEY
-DOMAIN-SUFFIX,disney.co.uk,DISNEY
-DOMAIN-SUFFIX,disney.co.za,DISNEY
-DOMAIN-SUFFIX,disney.com,DISNEY
-DOMAIN-SUFFIX,disney.com.au,DISNEY
-DOMAIN-SUFFIX,disney.com.br,DISNEY
-DOMAIN-SUFFIX,disney.com.hk,DISNEY
-DOMAIN-SUFFIX,disney.com.tw,DISNEY
-DOMAIN-SUFFIX,disney.cz,DISNEY
-DOMAIN-SUFFIX,disney.de,DISNEY
-DOMAIN-SUFFIX,disney.demdex.net,DISNEY
-DOMAIN-SUFFIX,disney.dk,DISNEY
-DOMAIN-SUFFIX,disney.es,DISNEY
-DOMAIN-SUFFIX,disney.fi,DISNEY
-DOMAIN-SUFFIX,disney.fr,DISNEY
-DOMAIN-SUFFIX,disney.gr,DISNEY
-DOMAIN-SUFFIX,disney.hu,DISNEY
-DOMAIN-SUFFIX,disney.id,DISNEY
-DOMAIN-SUFFIX,disney.in,DISNEY
-DOMAIN-SUFFIX,disney.io,DISNEY
-DOMAIN-SUFFIX,disney.it,DISNEY
-DOMAIN-SUFFIX,disney.my,DISNEY
-DOMAIN-SUFFIX,disney.my.sentry.io,DISNEY
-DOMAIN-SUFFIX,disney.nl,DISNEY
-DOMAIN-SUFFIX,disney.no,DISNEY
-DOMAIN-SUFFIX,disney.ph,DISNEY
-DOMAIN-SUFFIX,disney.pl,DISNEY
-DOMAIN-SUFFIX,disney.pt,DISNEY
-DOMAIN-SUFFIX,disney.ro,DISNEY
-DOMAIN-SUFFIX,disney.ru,DISNEY
-DOMAIN-SUFFIX,disney.se,DISNEY
-DOMAIN-SUFFIX,disney.sg,DISNEY
-DOMAIN-SUFFIX,disneyadsales.com,DISNEY
-DOMAIN-SUFFIX,disneyarena.com,DISNEY
-DOMAIN-SUFFIX,disneyaulani.com,DISNEY
-DOMAIN-SUFFIX,disneybaby.com,DISNEY
-DOMAIN-SUFFIX,disneycareers.com,DISNEY
-DOMAIN-SUFFIX,disneychannelonstage.com,DISNEY
-DOMAIN-SUFFIX,disneychannelroadtrip.com,DISNEY
-DOMAIN-SUFFIX,disneycruisebrasil.com,DISNEY
-DOMAIN-SUFFIX,disneyenconcert.com,DISNEY
-DOMAIN-SUFFIX,disneyiejobs.com,DISNEY
-DOMAIN-SUFFIX,disneyinflight.com,DISNEY
-DOMAIN-SUFFIX,disneyinternational.com,DISNEY
-DOMAIN-SUFFIX,disneyinternationalhd.com,DISNEY
-DOMAIN-SUFFIX,disneyjunior.com,DISNEY
-DOMAIN-SUFFIX,disneyjuniortreataday.com,DISNEY
-DOMAIN-SUFFIX,disneylandparis.com,DISNEY
-DOMAIN-SUFFIX,disneylatino.com,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.co.il,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.co.uk,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.co.za,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.de,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.es,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.fr,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.gen.tr,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.gr,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.it,DISNEY
-DOMAIN-SUFFIX,disneymagicmoments.pl,DISNEY
-DOMAIN-SUFFIX,disneymagicmomentsme.com,DISNEY
-DOMAIN-SUFFIX,disneyme.com,DISNEY
-DOMAIN-SUFFIX,disneymeetingsandevents.com,DISNEY
-DOMAIN-SUFFIX,disneymovieinsiders.com,DISNEY
-DOMAIN-SUFFIX,disneymusicpromotion.com,DISNEY
-DOMAIN-SUFFIX,disneynewseries.com,DISNEY
-DOMAIN-SUFFIX,disneynow.com,DISNEY
-DOMAIN-SUFFIX,disneypeoplesurveys.com,DISNEY
-DOMAIN-SUFFIX,disneyplus.bn5x.net,DISNEY
-DOMAIN-SUFFIX,disneyplus.com,DISNEY
-DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,DISNEY
-DOMAIN-SUFFIX,disneyprivacycenter.com,DISNEY
-DOMAIN-SUFFIX,disneyredirects.com,DISNEY
-DOMAIN-SUFFIX,disneysrivieraresort.com,DISNEY
-DOMAIN-SUFFIX,disneystore.com,DISNEY
-DOMAIN-SUFFIX,disneystreaming.com,DISNEY
-DOMAIN-SUFFIX,disneysubscription.com,DISNEY
-DOMAIN-SUFFIX,disneytermsofuse.com,DISNEY
-DOMAIN-SUFFIX,disneytickets.co.uk,DISNEY
-DOMAIN-SUFFIX,disneyturkiye.com.tr,DISNEY
-DOMAIN-SUFFIX,disneytvajobs.com,DISNEY
-DOMAIN-SUFFIX,disneyworld-go.com,DISNEY
-DOMAIN-SUFFIX,dlp-media.com,DISNEY
-DOMAIN-SUFFIX,dmed.technology,DISNEY
-DOMAIN-SUFFIX,dssott.com,DISNEY
-DOMAIN-SUFFIX,dtci.co,DISNEY
-DOMAIN-SUFFIX,dtci.technology,DISNEY
-DOMAIN-SUFFIX,edgedatg.com,DISNEY
-DOMAIN-SUFFIX,espn.co.uk,DISNEY
-DOMAIN-SUFFIX,espn.com,DISNEY
-DOMAIN-SUFFIX,espn.hb.omtrdc.net,DISNEY
-DOMAIN-SUFFIX,espn.net,DISNEY
-DOMAIN-SUFFIX,espncdn.com,DISNEY
-DOMAIN-SUFFIX,espndotcom.tt.omtrdc.net,DISNEY
-DOMAIN-SUFFIX,espnqa.com,DISNEY
-DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,DISNEY
-DOMAIN-SUFFIX,go-disneyworldgo.com,DISNEY
-DOMAIN-SUFFIX,go.com,DISNEY
-DOMAIN-SUFFIX,hotstar-cdn.net,DISNEY
-DOMAIN-SUFFIX,hotstar-labs.com,DISNEY
-DOMAIN-SUFFIX,hotstar.com,DISNEY
-DOMAIN-SUFFIX,hotstarext.com,DISNEY
-DOMAIN-SUFFIX,hsprepack.akamaized.net,DISNEY
-DOMAIN-SUFFIX,js-agent.newrelic.com,DISNEY
-DOMAIN-SUFFIX,marvel.com,DISNEY
-DOMAIN-SUFFIX,marvel10thanniversary.com,DISNEY
-DOMAIN-SUFFIX,marveldimensionofheroes.com,DISNEY
-DOMAIN-SUFFIX,marvelparty.net,DISNEY
-DOMAIN-SUFFIX,marvelpinball.com,DISNEY
-DOMAIN-SUFFIX,marvelsdoubleagent.com,DISNEY
-DOMAIN-SUFFIX,marvelspotlightplays.com,DISNEY
-DOMAIN-SUFFIX,marvelsuperheroseptember.com,DISNEY
-DOMAIN-SUFFIX,marvelsuperwar.com,DISNEY
-DOMAIN-SUFFIX,mickey.tv,DISNEY
-DOMAIN-SUFFIX,moviesanywhere.com,DISNEY
-DOMAIN-SUFFIX,natgeomaps.com,DISNEY
-DOMAIN-SUFFIX,nationalgeographic.com,DISNEY
-DOMAIN-SUFFIX,nationalgeographicpartners.com,DISNEY
-DOMAIN-SUFFIX,ngeo.com,DISNEY
-DOMAIN-SUFFIX,nomadlandmovie.ch,DISNEY
-DOMAIN-SUFFIX,playmation.com,DISNEY
-DOMAIN-SUFFIX,shopdisney.com,DISNEY
-DOMAIN-SUFFIX,shops-disney.com,DISNEY
-DOMAIN-SUFFIX,sorcerersarena.com,DISNEY
-DOMAIN-SUFFIX,spaindisney.com,DISNEY
-DOMAIN-SUFFIX,star-brasil.com,DISNEY
-DOMAIN-SUFFIX,star-latam.com,DISNEY
-DOMAIN-SUFFIX,starott.com,DISNEY
-DOMAIN-SUFFIX,starplus.com,DISNEY
-DOMAIN-SUFFIX,starwars.com,DISNEY
-DOMAIN-SUFFIX,starwarsgalacticstarcruiser.com,DISNEY
-DOMAIN-SUFFIX,starwarskids.com,DISNEY
-DOMAIN-SUFFIX,streamingdisney.net,DISNEY
-DOMAIN-SUFFIX,themarvelexperiencetour.com,DISNEY
-DOMAIN-SUFFIX,thestationbymaker.com,DISNEY
-DOMAIN-SUFFIX,thewaltdisneycompany.com,DISNEY
-DOMAIN-SUFFIX,thisispolaris.com,DISNEY
-DOMAIN-SUFFIX,watchdisneyfe.com,DISNEY
-DOMAIN-SUFFIX,watchespn.com,DISNEY
-DOMAIN-SUFFIX,com.disney.datg.videoplatforms.android.abc,DISNEY
-DOMAIN-SUFFIX,com.disney.disneyplus,DISNEY
+DOMAIN-SUFFIX,20thcenturystudios.com.au
+DOMAIN-SUFFIX,20thcenturystudios.com.br
+DOMAIN-SUFFIX,20thcenturystudios.jp
+DOMAIN-SUFFIX,abc-studios.com
+DOMAIN-SUFFIX,abc.com
+DOMAIN-SUFFIX,abcnews.com
+DOMAIN-SUFFIX,abcnews.edgesuite.net
+DOMAIN-SUFFIX,adobedtm.com
+DOMAIN-SUFFIX,adventuresbydisney.com
+DOMAIN-SUFFIX,babble.com
+DOMAIN-SUFFIX,babyzone.com
+DOMAIN-SUFFIX,bam.nr-data.net
+DOMAIN-SUFFIX,bamgrid.com
+DOMAIN-SUFFIX,beautyandthebeastmusical.co.uk
+DOMAIN-SUFFIX,braze.com
+DOMAIN-SUFFIX,cdn.optimizely.com
+DOMAIN-SUFFIX,conviva.com
+DOMAIN-SUFFIX,d9.flashtalking.com
+DOMAIN-SUFFIX,dilcdn.com
+DOMAIN-SUFFIX,disney-asia.com
+DOMAIN-SUFFIX,disney-discount.com
+DOMAIN-SUFFIX,disney-plus.net
+DOMAIN-SUFFIX,disney-portal.my.onetrust.com
+DOMAIN-SUFFIX,disney-studio.com
+DOMAIN-SUFFIX,disney-studio.net
+DOMAIN-SUFFIX,disney.asia
+DOMAIN-SUFFIX,disney.be
+DOMAIN-SUFFIX,disney.bg
+DOMAIN-SUFFIX,disney.ca
+DOMAIN-SUFFIX,disney.ch
+DOMAIN-SUFFIX,disney.co.il
+DOMAIN-SUFFIX,disney.co.jp
+DOMAIN-SUFFIX,disney.co.kr
+DOMAIN-SUFFIX,disney.co.th
+DOMAIN-SUFFIX,disney.co.uk
+DOMAIN-SUFFIX,disney.co.za
+DOMAIN-SUFFIX,disney.com
+DOMAIN-SUFFIX,disney.com.au
+DOMAIN-SUFFIX,disney.com.br
+DOMAIN-SUFFIX,disney.com.hk
+DOMAIN-SUFFIX,disney.com.tw
+DOMAIN-SUFFIX,disney.cz
+DOMAIN-SUFFIX,disney.de
+DOMAIN-SUFFIX,disney.demdex.net
+DOMAIN-SUFFIX,disney.dk
+DOMAIN-SUFFIX,disney.es
+DOMAIN-SUFFIX,disney.fi
+DOMAIN-SUFFIX,disney.fr
+DOMAIN-SUFFIX,disney.gr
+DOMAIN-SUFFIX,disney.hu
+DOMAIN-SUFFIX,disney.id
+DOMAIN-SUFFIX,disney.in
+DOMAIN-SUFFIX,disney.io
+DOMAIN-SUFFIX,disney.it
+DOMAIN-SUFFIX,disney.my
+DOMAIN-SUFFIX,disney.my.sentry.io
+DOMAIN-SUFFIX,disney.nl
+DOMAIN-SUFFIX,disney.no
+DOMAIN-SUFFIX,disney.ph
+DOMAIN-SUFFIX,disney.pl
+DOMAIN-SUFFIX,disney.pt
+DOMAIN-SUFFIX,disney.ro
+DOMAIN-SUFFIX,disney.ru
+DOMAIN-SUFFIX,disney.se
+DOMAIN-SUFFIX,disney.sg
+DOMAIN-SUFFIX,disneyadsales.com
+DOMAIN-SUFFIX,disneyarena.com
+DOMAIN-SUFFIX,disneyaulani.com
+DOMAIN-SUFFIX,disneybaby.com
+DOMAIN-SUFFIX,disneycareers.com
+DOMAIN-SUFFIX,disneychannelonstage.com
+DOMAIN-SUFFIX,disneychannelroadtrip.com
+DOMAIN-SUFFIX,disneycruisebrasil.com
+DOMAIN-SUFFIX,disneyenconcert.com
+DOMAIN-SUFFIX,disneyiejobs.com
+DOMAIN-SUFFIX,disneyinflight.com
+DOMAIN-SUFFIX,disneyinternational.com
+DOMAIN-SUFFIX,disneyinternationalhd.com
+DOMAIN-SUFFIX,disneyjunior.com
+DOMAIN-SUFFIX,disneyjuniortreataday.com
+DOMAIN-SUFFIX,disneylandparis.com
+DOMAIN-SUFFIX,disneylatino.com
+DOMAIN-SUFFIX,disneymagicmoments.co.il
+DOMAIN-SUFFIX,disneymagicmoments.co.uk
+DOMAIN-SUFFIX,disneymagicmoments.co.za
+DOMAIN-SUFFIX,disneymagicmoments.de
+DOMAIN-SUFFIX,disneymagicmoments.es
+DOMAIN-SUFFIX,disneymagicmoments.fr
+DOMAIN-SUFFIX,disneymagicmoments.gen.tr
+DOMAIN-SUFFIX,disneymagicmoments.gr
+DOMAIN-SUFFIX,disneymagicmoments.it
+DOMAIN-SUFFIX,disneymagicmoments.pl
+DOMAIN-SUFFIX,disneymagicmomentsme.com
+DOMAIN-SUFFIX,disneyme.com
+DOMAIN-SUFFIX,disneymeetingsandevents.com
+DOMAIN-SUFFIX,disneymovieinsiders.com
+DOMAIN-SUFFIX,disneymusicpromotion.com
+DOMAIN-SUFFIX,disneynewseries.com
+DOMAIN-SUFFIX,disneynow.com
+DOMAIN-SUFFIX,disneypeoplesurveys.com
+DOMAIN-SUFFIX,disneyplus.bn5x.net
+DOMAIN-SUFFIX,disneyplus.com
+DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net
+DOMAIN-SUFFIX,disneyprivacycenter.com
+DOMAIN-SUFFIX,disneyredirects.com
+DOMAIN-SUFFIX,disneysrivieraresort.com
+DOMAIN-SUFFIX,disneystore.com
+DOMAIN-SUFFIX,disneystreaming.com
+DOMAIN-SUFFIX,disneysubscription.com
+DOMAIN-SUFFIX,disneytermsofuse.com
+DOMAIN-SUFFIX,disneytickets.co.uk
+DOMAIN-SUFFIX,disneyturkiye.com.tr
+DOMAIN-SUFFIX,disneytvajobs.com
+DOMAIN-SUFFIX,disneyworld-go.com
+DOMAIN-SUFFIX,dlp-media.com
+DOMAIN-SUFFIX,dmed.technology
+DOMAIN-SUFFIX,dssott.com
+DOMAIN-SUFFIX,dtci.co
+DOMAIN-SUFFIX,dtci.technology
+DOMAIN-SUFFIX,edgedatg.com
+DOMAIN-SUFFIX,espn.co.uk
+DOMAIN-SUFFIX,espn.com
+DOMAIN-SUFFIX,espn.hb.omtrdc.net
+DOMAIN-SUFFIX,espn.net
+DOMAIN-SUFFIX,espncdn.com
+DOMAIN-SUFFIX,espndotcom.tt.omtrdc.net
+DOMAIN-SUFFIX,espnqa.com
+DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com
+DOMAIN-SUFFIX,go-disneyworldgo.com
+DOMAIN-SUFFIX,go.com
+DOMAIN-SUFFIX,hotstar-cdn.net
+DOMAIN-SUFFIX,hotstar-labs.com
+DOMAIN-SUFFIX,hotstar.com
+DOMAIN-SUFFIX,hotstarext.com
+DOMAIN-SUFFIX,hsprepack.akamaized.net
+DOMAIN-SUFFIX,js-agent.newrelic.com
+DOMAIN-SUFFIX,marvel.com
+DOMAIN-SUFFIX,marvel10thanniversary.com
+DOMAIN-SUFFIX,marveldimensionofheroes.com
+DOMAIN-SUFFIX,marvelparty.net
+DOMAIN-SUFFIX,marvelpinball.com
+DOMAIN-SUFFIX,marvelsdoubleagent.com
+DOMAIN-SUFFIX,marvelspotlightplays.com
+DOMAIN-SUFFIX,marvelsuperheroseptember.com
+DOMAIN-SUFFIX,marvelsuperwar.com
+DOMAIN-SUFFIX,mickey.tv
+DOMAIN-SUFFIX,moviesanywhere.com
+DOMAIN-SUFFIX,natgeomaps.com
+DOMAIN-SUFFIX,nationalgeographic.com
+DOMAIN-SUFFIX,nationalgeographicpartners.com
+DOMAIN-SUFFIX,ngeo.com
+DOMAIN-SUFFIX,nomadlandmovie.ch
+DOMAIN-SUFFIX,playmation.com
+DOMAIN-SUFFIX,shopdisney.com
+DOMAIN-SUFFIX,shops-disney.com
+DOMAIN-SUFFIX,sorcerersarena.com
+DOMAIN-SUFFIX,spaindisney.com
+DOMAIN-SUFFIX,star-brasil.com
+DOMAIN-SUFFIX,star-latam.com
+DOMAIN-SUFFIX,starott.com
+DOMAIN-SUFFIX,starplus.com
+DOMAIN-SUFFIX,starwars.com
+DOMAIN-SUFFIX,starwarsgalacticstarcruiser.com
+DOMAIN-SUFFIX,starwarskids.com
+DOMAIN-SUFFIX,streamingdisney.net
+DOMAIN-SUFFIX,themarvelexperiencetour.com
+DOMAIN-SUFFIX,thestationbymaker.com
+DOMAIN-SUFFIX,thewaltdisneycompany.com
+DOMAIN-SUFFIX,thisispolaris.com
+DOMAIN-SUFFIX,watchdisneyfe.com
+DOMAIN-SUFFIX,watchespn.com
+DOMAIN-SUFFIX,com.disney.datg.videoplatforms.android.abc
+DOMAIN-SUFFIX,com.disney.disneyplus
