--- a/github.conf
+++ b/github.conf
@@ -1,6 +1,6 @@
-DOMAIN-SUFFIX,github.com,GITHUB
-DOMAIN-SUFFIX,githubassets.com,GITHUB
-DOMAIN-SUFFIX,githubusercontent.com,GITHUB
-DOMAIN-SUFFIX,ghcr.io,GITHUB
-DOMAIN-SUFFIX,github.io,GITHUB
-DOMAIN-SUFFIX,githubapp.com,GITHUB
+DOMAIN-SUFFIX,github.com
+DOMAIN-SUFFIX,githubassets.com
+DOMAIN-SUFFIX,githubusercontent.com
+DOMAIN-SUFFIX,ghcr.io
+DOMAIN-SUFFIX,github.io
+DOMAIN-SUFFIX,githubapp.com
