--- a/microsoft.conf
+++ b/microsoft.conf
@@ -1,103 +1,103 @@
-DOMAIN-KEYWORD,microsoft,Microsoft
-DOMAIN-KEYWORD,azure,Microsoft
-DOMAIN-KEYWORD,biying,Microsoft
-DOMAIN-KEYWORD,office365,Microsoft
-DOMAIN-KEYWORD,onedrive,Microsoft
-DOMAIN-KEYWORD,xbox,Microsoft
-DOMAIN-KEYWORD,windows,Microsoft
-DOMAIN-KEYWORD,windowsupdate,Microsoft
-DOMAIN-KEYWORD,hotmail,Microsoft
-DOMAIN-KEYWORD,onecollector,Microsoft
-DOMAIN-KEYWORD,optimizely,Microsoft
-DOMAIN-KEYWORD,outlook,Microsoft
-DOMAIN-KEYWORD,microsoft365,Microsoft
-DOMAIN-SUFFIX,gamepass.com,Microsoft
-DOMAIN-SUFFIX,assets-yammer.com,Microsoft
-DOMAIN-SUFFIX,footprintdns.com,Microsoft
-DOMAIN-SUFFIX,storage.live.com,Microsoft
-DOMAIN-SUFFIX,microsoft.com,Microsoft
-DOMAIN-SUFFIX,microsoftonline-p.com,Microsoft
-DOMAIN-SUFFIX,microsoftonline.com,Microsoft
-DOMAIN-SUFFIX,msxiaoice.com,Microsoft
-DOMAIN-SUFFIX,msxiaona.cn,Microsoft
-DOMAIN-SUFFIX,windows.com,Microsoft
-DOMAIN-SUFFIX,bi.ng,Microsoft
-DOMAIN-SUFFIX,msxiaobing.com,Microsoft
-DOMAIN-SUFFIX,bing.com,Microsoft
-DOMAIN-SUFFIX,bing123.com,Microsoft
-DOMAIN-SUFFIX,bing135.com,Microsoft
-DOMAIN-SUFFIX,bing4.com,Microsoft
-DOMAIN-SUFFIX,bing.com.bo,Microsoft
-DOMAIN-SUFFIX,bing.com.co,Microsoft
-DOMAIN-SUFFIX,bing.com.cy,Microsoft
-DOMAIN-SUFFIX,bing.com.gt,Microsoft
-DOMAIN-SUFFIX,bing.jp,Microsoft
-DOMAIN-SUFFIX,bing.cn,Microsoft
-DOMAIN-SUFFIX,bing.net,Microsoft
-DOMAIN-SUFFIX,bingapis.com,Microsoft
-DOMAIN-SUFFIX,bingforbusiness.com,Microsoft
-DOMAIN-SUFFIX,office365love.com,Microsoft
-DOMAIN-SUFFIX,office365tw.com,Microsoft
-DOMAIN-SUFFIX,osdinfra.net,Microsoft
-DOMAIN-SUFFIX,renovacionoffice.com,Microsoft
-DOMAIN-SUFFIX,sprinklesapp.com,Microsoft
-DOMAIN-SUFFIX,1drv.com,Microsoft
-DOMAIN-SUFFIX,1drv.ms,Microsoft
-DOMAIN-SUFFIX,livefilestore.com,Microsoft
-DOMAIN-SUFFIX,msdn.com,Microsoft
-DOMAIN-SUFFIX,msn.cn,Microsoft
-DOMAIN-SUFFIX,msn.com,Microsoft
-DOMAIN-SUFFIX,msn.com.cn,Microsoft
-DOMAIN-SUFFIX,msn.com.nsatc.net,Microsoft
-DOMAIN-SUFFIX,msn.com.tw,Microsoft
-DOMAIN-SUFFIX,msocdn.com,Microsoft
-DOMAIN-SUFFIX,msocsp.com,Microsoft
-DOMAIN-SUFFIX,bibg.com,Microsoft
-DOMAIN-SUFFIX,biing.com,Microsoft
-DOMAIN-SUFFIX,xbox360.com,Microsoft
-DOMAIN-SUFFIX,cloudapp.net,Microsoft
-DOMAIN-SUFFIX,cloudappsecurity.com,Microsoft
-DOMAIN-SUFFIX,centralvalidation.com,Microsoft
-DOMAIN-SUFFIX,ch9.ms,Microsoft
-DOMAIN-SUFFIX,charticulator.com,Microsoft
-DOMAIN-SUFFIX,live.com,Microsoft
-DOMAIN-SUFFIX,live.com.au,Microsoft
-DOMAIN-SUFFIX,live.eu,Microsoft
-DOMAIN-SUFFIX,live.net,Microsoft
-DOMAIN-SUFFIX,office.com,Microsoft
-DOMAIN-SUFFIX,office.de,Microsoft
-DOMAIN-SUFFIX,office.net,Microsoft
-DOMAIN-SUFFIX,office.microsoft,Microsoft
-DOMAIN-SUFFIX,office365.com,Microsoft
-DOMAIN-SUFFIX,office365.us,Microsoft
-DOMAIN-SUFFIX,o365filtering.com,Microsoft
-DOMAIN-SUFFIX,officedev.cn,Microsoft
-DOMAIN-SUFFIX,onmicrosoft.com,Microsoft
-DOMAIN-SUFFIX,svc.ms,Microsoft
-DOMAIN-SUFFIX,minecraft.net,Microsoft
-DOMAIN-SUFFIX,minecraftshop.com,Microsoft
-DOMAIN-SUFFIX,mojang.com,Microsoft
-DOMAIN-SUFFIX,hummingbird.ms,Microsoft
-DOMAIN-SUFFIX,ie10.com,Microsoft
-DOMAIN-SUFFIX,ie11.com,Microsoft
-DOMAIN-SUFFIX,ie8.co,Microsoft
-DOMAIN-SUFFIX,ie9.com,Microsoft
-DOMAIN-SUFFIX,imaginecup.pl,Microsoft
-DOMAIN-SUFFIX,img-prod-cms-rt-microsoft-com,Microsoft
-DOMAIN-SUFFIX,internetexplorer.co,Microsoft
-DOMAIN-SUFFIX,internetexplorer.com,Microsoft
-DOMAIN-SUFFIX,intunewiki.com,Microsoft
-DOMAIN-SUFFIX,iotinactionevents.com,Microsoft
-DOMAIN-SUFFIX,joinms.com,Microsoft
-DOMAIN-SUFFIX,joinms.com.cn,Microsoft
-DOMAIN-SUFFIX,joinmva.com,Microsoft
-DOMAIN-SUFFIX,makecode.org,Microsoft
-DOMAIN-SUFFIX,managedmeetingrooms.com,Microsoft
-DOMAIN-SUFFIX,meetfasttrack.com,Microsoft
-DOMAIN-SUFFIX,meetyourdevices.com,Microsoft
-DOMAIN-SUFFIX,mepn.com,Microsoft
-DOMAIN-SUFFIX,xboxab.com,Microsoft
-DOMAIN-SUFFIX,xboxab.net,Microsoft
-DOMAIN-SUFFIX,xboxlive.com,Microsoft
-DOMAIN-SUFFIX,xboxservices.com,Microsoft
-DOMAIN-SUFFIX,yammer.com,Microsoft
+DOMAIN-KEYWORD,microsoft
+DOMAIN-KEYWORD,azure
+DOMAIN-KEYWORD,biying
+DOMAIN-KEYWORD,office365
+DOMAIN-KEYWORD,onedrive
+DOMAIN-KEYWORD,xbox
+DOMAIN-KEYWORD,windows
+DOMAIN-KEYWORD,windowsupdate
+DOMAIN-KEYWORD,hotmail
+DOMAIN-KEYWORD,onecollector
+DOMAIN-KEYWORD,optimizely
+DOMAIN-KEYWORD,outlook
+DOMAIN-KEYWORD,microsoft365
+DOMAIN-SUFFIX,gamepass.com
+DOMAIN-SUFFIX,assets-yammer.com
+DOMAIN-SUFFIX,footprintdns.com
+DOMAIN-SUFFIX,storage.live.com
+DOMAIN-SUFFIX,microsoft.com
+DOMAIN-SUFFIX,microsoftonline-p.com
+DOMAIN-SUFFIX,microsoftonline.com
+DOMAIN-SUFFIX,msxiaoice.com
+DOMAIN-SUFFIX,msxiaona.cn
+DOMAIN-SUFFIX,windows.com
+DOMAIN-SUFFIX,bi.ng
+DOMAIN-SUFFIX,msxiaobing.com
+DOMAIN-SUFFIX,bing.com
+DOMAIN-SUFFIX,bing123.com
+DOMAIN-SUFFIX,bing135.com
+DOMAIN-SUFFIX,bing4.com
+DOMAIN-SUFFIX,bing.com.bo
+DOMAIN-SUFFIX,bing.com.co
+DOMAIN-SUFFIX,bing.com.cy
+DOMAIN-SUFFIX,bing.com.gt
+DOMAIN-SUFFIX,bing.jp
+DOMAIN-SUFFIX,bing.cn
+DOMAIN-SUFFIX,bing.net
+DOMAIN-SUFFIX,bingapis.com
+DOMAIN-SUFFIX,bingforbusiness.com
+DOMAIN-SUFFIX,office365love.com
+DOMAIN-SUFFIX,office365tw.com
+DOMAIN-SUFFIX,osdinfra.net
+DOMAIN-SUFFIX,renovacionoffice.com
+DOMAIN-SUFFIX,sprinklesapp.com
+DOMAIN-SUFFIX,1drv.com
+DOMAIN-SUFFIX,1drv.ms
+DOMAIN-SUFFIX,livefilestore.com
+DOMAIN-SUFFIX,msdn.com
+DOMAIN-SUFFIX,msn.cn
+DOMAIN-SUFFIX,msn.com
+DOMAIN-SUFFIX,msn.com.cn
+DOMAIN-SUFFIX,msn.com.nsatc.net
+DOMAIN-SUFFIX,msn.com.tw
+DOMAIN-SUFFIX,msocdn.com
+DOMAIN-SUFFIX,msocsp.com
+DOMAIN-SUFFIX,bibg.com
+DOMAIN-SUFFIX,biing.com
+DOMAIN-SUFFIX,xbox360.com
+DOMAIN-SUFFIX,cloudapp.net
+DOMAIN-SUFFIX,cloudappsecurity.com
+DOMAIN-SUFFIX,centralvalidation.com
+DOMAIN-SUFFIX,ch9.ms
+DOMAIN-SUFFIX,charticulator.com
+DOMAIN-SUFFIX,live.com
+DOMAIN-SUFFIX,live.com.au
+DOMAIN-SUFFIX,live.eu
+DOMAIN-SUFFIX,live.net
+DOMAIN-SUFFIX,office.com
+DOMAIN-SUFFIX,office.de
+DOMAIN-SUFFIX,office.net
+DOMAIN-SUFFIX,office.microsoft
+DOMAIN-SUFFIX,office365.com
+DOMAIN-SUFFIX,office365.us
+DOMAIN-SUFFIX,o365filtering.com
+DOMAIN-SUFFIX,officedev.cn
+DOMAIN-SUFFIX,onmicrosoft.com
+DOMAIN-SUFFIX,svc.ms
+DOMAIN-SUFFIX,minecraft.net
+DOMAIN-SUFFIX,minecraftshop.com
+DOMAIN-SUFFIX,mojang.com
+DOMAIN-SUFFIX,hummingbird.ms
+DOMAIN-SUFFIX,ie10.com
+DOMAIN-SUFFIX,ie11.com
+DOMAIN-SUFFIX,ie8.co
+DOMAIN-SUFFIX,ie9.com
+DOMAIN-SUFFIX,imaginecup.pl
+DOMAIN-SUFFIX,img-prod-cms-rt-microsoft-com
+DOMAIN-SUFFIX,internetexplorer.co
+DOMAIN-SUFFIX,internetexplorer.com
+DOMAIN-SUFFIX,intunewiki.com
+DOMAIN-SUFFIX,iotinactionevents.com
+DOMAIN-SUFFIX,joinms.com
+DOMAIN-SUFFIX,joinms.com.cn
+DOMAIN-SUFFIX,joinmva.com
+DOMAIN-SUFFIX,makecode.org
+DOMAIN-SUFFIX,managedmeetingrooms.com
+DOMAIN-SUFFIX,meetfasttrack.com
+DOMAIN-SUFFIX,meetyourdevices.com
+DOMAIN-SUFFIX,mepn.com
+DOMAIN-SUFFIX,xboxab.com
+DOMAIN-SUFFIX,xboxab.net
+DOMAIN-SUFFIX,xboxlive.com
+DOMAIN-SUFFIX,xboxservices.com
+DOMAIN-SUFFIX,yammer.com
