--- a/tiktok.conf
+++ b/tiktok.conf
@@ -1,15 +1,15 @@
-DOMAIN,p16-tiktokcdn-com.akamaized.net,TIKTOK
-DOMAIN-SUFFIX,byteoversea.com,TIKTOK
-DOMAIN-SUFFIX,ibytedtos.com,TIKTOK
-DOMAIN-SUFFIX,ibyteimg.com,TIKTOK
-DOMAIN-SUFFIX,ipstatp.com,TIKTOK
-DOMAIN-SUFFIX,muscdn.com,TIKTOK
-DOMAIN-SUFFIX,musical.ly,TIKTOK
-DOMAIN-SUFFIX,sgpstatp.com,TIKTOK
-DOMAIN-SUFFIX,snssdk.com,TIKTOK
-DOMAIN-SUFFIX,tik-tokapi.com,TIKTOK
-DOMAIN-SUFFIX,tiktok.com,TIKTOK
-DOMAIN-SUFFIX,tiktokcdn.com,TIKTOK
-DOMAIN-SUFFIX,tiktokv.com,TIKTOK
-DOMAIN-KEYWORD,-tiktokcdn-com,TIKTOK
-USER-AGENT,TikTok*,TIKTOK
+DOMAIN,p16-tiktokcdn-com.akamaized.net
+DOMAIN-SUFFIX,byteoversea.com
+DOMAIN-SUFFIX,ibytedtos.com
+DOMAIN-SUFFIX,ibyteimg.com
+DOMAIN-SUFFIX,ipstatp.com
+DOMAIN-SUFFIX,muscdn.com
+DOMAIN-SUFFIX,musical.ly
+DOMAIN-SUFFIX,sgpstatp.com
+DOMAIN-SUFFIX,snssdk.com
+DOMAIN-SUFFIX,tik-tokapi.com
+DOMAIN-SUFFIX,tiktok.com
+DOMAIN-SUFFIX,tiktokcdn.com
+DOMAIN-SUFFIX,tiktokv.com
+DOMAIN-KEYWORD,-tiktokcdn-com
+USER-AGENT,TikTok*
