--- a/twitch.conf
+++ b/twitch.conf
@@ -1,7 +1,7 @@
-DOMAIN-SUFFIX,twitch.tv,TWITCH
-DOMAIN-SUFFIX,ext-twitch.tv,TWITCH
-DOMAIN-SUFFIX,jtvnw.net,TWITCH
-DOMAIN-SUFFIX,live-video.net,TWITCH
-DOMAIN-SUFFIX,ttvnw.net,TWITCH
-DOMAIN-SUFFIX,twitchcdn.net,TWITCH
-DOMAIN-SUFFIX,twitchsvc.net,TWITCH
+DOMAIN-SUFFIX,twitch.tv
+DOMAIN-SUFFIX,ext-twitch.tv
+DOMAIN-SUFFIX,jtvnw.net
+DOMAIN-SUFFIX,live-video.net
+DOMAIN-SUFFIX,ttvnw.net
+DOMAIN-SUFFIX,twitchcdn.net
+DOMAIN-SUFFIX,twitchsvc.net
