--- a/wechat.conf
+++ b/wechat.conf
@@ -1,20 +1,20 @@
-DOMAIN-SUFFIX,wechat.com,WECHAT
-DOMAIN-SUFFIX,qpic.cn,WECHAT
-DOMAIN-SUFFIX,wechatpay.cn,WECHAT
-DOMAIN-SUFFIX,qlogo.cn,WECHAT
-DOMAIN-SUFFIX,wx.qq.com,WECHAT
-DOMAIN-SUFFIX,servicewechat.com,WECHAT
-DOMAIN-SUFFIX,scdsjzx.com,WECHAT
-DOMAIN-SUFFIX,servicewechat.com,WECHAT
-DOMAIN-SUFFIX,weixinconf.qq.com,WECHAT
-DOMAIN-SUFFIX,wxs.qq.com,WECHAT
-DOMAIN-SUFFIX,weixinconf.qq.com,WECHAT
-DOMAIN-SUFFIX,wechatapp.com,WECHAT
-DOMAIN-SUFFIX,xdow.net,WECHAT
-DOMAIN-KEYWORD,weixin,WECHAT
-DOMAIN-KEYWORD,wechat,WECHAT
-IP-CIDR,43.129.255.38/18,WECHAT
-IP-CIDR,129.206.106.198/16,WECHAT
-IP-CIDR,129.226.106.198/20,WECHAT
-IP-CIDR,120.232.51.42/16,WECHAT
-IP-CIDR,202.108.22.5/18,WECHAT
+DOMAIN-SUFFIX,wechat.com
+DOMAIN-SUFFIX,qpic.cn
+DOMAIN-SUFFIX,wechatpay.cn
+DOMAIN-SUFFIX,qlogo.cn
+DOMAIN-SUFFIX,wx.qq.com
+DOMAIN-SUFFIX,servicewechat.com
+DOMAIN-SUFFIX,scdsjzx.com
+DOMAIN-SUFFIX,servicewechat.com
+DOMAIN-SUFFIX,weixinconf.qq.com
+DOMAIN-SUFFIX,wxs.qq.com
+DOMAIN-SUFFIX,weixinconf.qq.com
+DOMAIN-SUFFIX,wechatapp.com
+DOMAIN-SUFFIX,xdow.net
+DOMAIN-KEYWORD,weixin
+DOMAIN-KEYWORD,wechat
+IP-CIDR,43.129.255.38/18
+IP-CIDR,129.206.106.198/16
+IP-CIDR,129.226.106.198/20
+IP-CIDR,120.232.51.42/16
+IP-CIDR,202.108.22.5/18
