--- a/xbox.conf
+++ b/xbox.conf
@@ -1,8 +1,8 @@
-DOMAIN-SUFFIX,xbox360.com,XBOX
-DOMAIN-SUFFIX,gamepass.com,XBOX
-DOMAIN-SUFFIX,xbox.com,XBOX
-DOMAIN-SUFFIX,xboxab.com,XBOX
-DOMAIN-SUFFIX,xboxab.net,XBOX
-DOMAIN-SUFFIX,xboxlive.com,XBOX
-DOMAIN-SUFFIX,xboxservices.com,XBOX
-DOMAIN-KEYWORD,xbox,XBOX
+DOMAIN-SUFFIX,xbox360.com
+DOMAIN-SUFFIX,gamepass.com
+DOMAIN-SUFFIX,xbox.com
+DOMAIN-SUFFIX,xboxab.com
+DOMAIN-SUFFIX,xboxab.net
+DOMAIN-SUFFIX,xboxlive.com
+DOMAIN-SUFFIX,xboxservices.com
+DOMAIN-KEYWORD,xbox
