--- a/youtube.conf
+++ b/youtube.conf
@@ -1,11 +1,11 @@
-DOMAIN-KEYWORD,youtube,YOUTUBE
-DOMAIN,yt3.ggpht.com,YOUTUBE
-DOMAIN-SUFFIX,youtube-nocookie.com,YOUTUBE
-DOMAIN-SUFFIX,googlevideo.com,YOUTUBE
-DOMAIN-SUFFIX,ggpht.com,YOUTUBE
-DOMAIN-SUFFIX,gvt1.com,YOUTUBE
-DOMAIN-SUFFIX,gvt2.com,YOUTUBE
-DOMAIN-SUFFIX,youtu.be,YOUTUBE
-DOMAIN-SUFFIX,ytimg.com,YOUTUBE
-DOMAIN-SUFFIX,music.youtube.com,YOUTUBE
-DOMAIN-SUFFIX,youtubeeducation.com,YOUTUBE
+DOMAIN-KEYWORD,youtube
+DOMAIN,yt3.ggpht.com
+DOMAIN-SUFFIX,youtube-nocookie.com
+DOMAIN-SUFFIX,googlevideo.com
+DOMAIN-SUFFIX,ggpht.com
+DOMAIN-SUFFIX,gvt1.com
+DOMAIN-SUFFIX,gvt2.com
+DOMAIN-SUFFIX,youtu.be
+DOMAIN-SUFFIX,ytimg.com
+DOMAIN-SUFFIX,music.youtube.com
+DOMAIN-SUFFIX,youtubeeducation.com
