--- a/apple.conf
+++ b/apple.conf
@@ -7,3 +7,15 @@ DOMAIN,news-events.apple.com
 DOMAIN,news-edge.apple.com
 DOMAIN,gspe1-ssl.ls.apple.com
 PROCESS-NAME,News
+DOMAIN-SUFFIX,blobstore.apple.com
+DOMAIN-SUFFIX,itsliveradio.apple.com
+DOMAIN-SUFFIX,aodp-ssl.apple.com
+DOMAIN-SUFFIX,video-ssl.itunes.apple.com
+DOMAIN-SUFFIX,mvod.itunes.apple.com
+DOMAIN-SUFFIX,hls-amt.itunes.apple.com
+DOMAIN-SUFFIX,audio-ssl.itunes.apple.com
+DOMAIN-SUFFIX,streamingaudio.itunes.apple.com
+DOMAIN-SUFFIX,amazonaws.com
+DOMAIN-SUFFIX,audio.itunes.apple.com
+DOMAIN-SUFFIX,xp.apple.com
+DOMAIN-SUFFIX,guzzoni.apple.com
