--- a/apple.conf
+++ b/apple.conf
@@ -19,3 +19,11 @@ DOMAIN-SUFFIX,amazonaws.com
 DOMAIN-SUFFIX,audio.itunes.apple.com
 DOMAIN-SUFFIX,xp.apple.com
 DOMAIN-SUFFIX,guzzoni.apple.com
+DOMAI,tv.apple.com
+DOMAI,smoot.apple.com
+DOMAI,cdn.apple-cloudkit.com
+DOMAI,js-cdn.music.apple.com
+DOMAI,np-edge.itunes.apple.com
+DOMAI,play-edge.itunes.apple.com
+DOMAI.radio.itunes.apple.com
+DOMAI,uts-api.itunes.apple.com
