--- a/apple.conf
+++ b/apple.conf
@@ -18,12 +18,12 @@ DOMAIN-SUFFIX,amazonaws.com
 DOMAIN-SUFFIX,audio.itunes.apple.com
 DOMAIN-SUFFIX,xp.apple.com
 DOMAIN-SUFFIX,guzzoni.apple.com
-DOMAI,tv.apple.com
-DOMAI,smoot.apple.com
-DOMAI,cdn.apple-cloudkit.com
-DOMAI,js-cdn.music.apple.com
-DOMAI,np-edge.itunes.apple.com
-DOMAI,play-edge.itunes.apple.com
-DOMAI.radio.itunes.apple.com
-DOMAI,uts-api.itunes.apple.com
+DOMAIN,tv.apple.com
+DOMAIN,smoot.apple.com
+DOMAIN,cdn.apple-cloudkit.com
+DOMAIN,js-cdn.music.apple.com
+DOMAIN,np-edge.itunes.apple.com
+DOMAIN,play-edge.itunes.apple.com
+DOMAIN.radio.itunes.apple.com
+DOMAIN,uts-api.itunes.apple.com
 PROCESS-NAME,News
