--- a/apple.conf
+++ b/apple.conf
@@ -24,6 +24,6 @@ DOMAIN,cdn.apple-cloudkit.com
 DOMAIN,js-cdn.music.apple.com
 DOMAIN,np-edge.itunes.apple.com
 DOMAIN,play-edge.itunes.apple.com
-DOMAIN.radio.itunes.apple.com
+DOMAIN,radio.itunes.apple.com
 DOMAIN,uts-api.itunes.apple.com
 PROCESS-NAME,News
