--- a/hbomax.conf
+++ b/hbomax.conf
@@ -1,6 +1,7 @@
 DOMAIN,wmff.warnermediacdn.com
 DOMAIN-SUFFIX,cinemax.com
 DOMAIN-SUFFIX,discomax.com
+DOMAIN-SUFFIX,max.com
 DOMAIN-SUFFIX,h264.io
 DOMAIN-SUFFIX,hbomax.com
 DOMAIN-SUFFIX,hbomaxcdn.com
